# FTS-Render

./: CMakeLists.txt  README.md  compute_pass_template.md  graphics_pass_template.md  ray_tracing_pass_template.md  xmake.lua
Asset/SDF/: Bunny.sdf  bunny.sdf  terrain.sdf
Source/: GlobalRender.cpp  GlobalRender.h  global_render.cpp  global_render.h  main.cpp
Source/Core/include/: ComCli.h  ComIntf.h  ComRoot.h  Delegate.h  Entity.h  File.h  MemoryPool.h  SysCall.h  Timer.h
Source/Core/math/: bounds.cpp  bounds.h  bvh.h  common.h  matrix.cpp  matrix.h  surface.cpp  (+2 more)
Source/Gui/: gui_panel.cpp  gui_pass.cpp  gui_pass.h
Source/RenderPass/: RenderPassTemplate.h
Source/Scene/: camera.cpp  camera.h  geometry.cpp  scene.cpp
Source/Shader/: BRDF.slang  BicubicTextureFiltering.slang  BrdfCommon.hlsli  Common.hlsli  Constants.hlsli  DDGICommon.hlsli  Intersect.hlsli  Material.hlsli  Material.slang  MathHelper.slang  Medium.hlsli  Octohedral.hlsli  PostProcess.hlsli  SdfCommon.hlsli  ShaderCompiler.cpp  ShaderCompiler.h  SkyCommon.hlsli  bicubic_texture_filter.slang  brdf_helper.slang  math_helper.slang  post_process_helper.slang  shader_compiler.cpp  shader_compiler.h  voxel_ircache_helper.slang  voxel_irradiance_helper.slang  vxgi_helper.slang
Source/dynamic_rhi/: draw.h  dynamic_rhi.h  format.h  pipeline.h  ray_tracing.h  resource.h  shader.h  state_track.h
Source/render_graph/: render_graph.cpp
Source/render_pass/: render_pass_template.md
Source/test/: test_sdf.cpp
VulkanTest/: GlfwWindow.cpp  GlfwWindow.h  VulkanBase.cpp  VulkanBase.h  main.cpp
asset/SDF/: Suzanne.sdf  bunny.sdf
source/: global_render.cpp  global_render.h  main.cpp
source/core/: xmake.lua
source/dynamic_rhi/: binding.h  command_list.h  descriptor.h  device.h  draw.h  dynamic_rhi.h  format.cpp  format.h  forward.h  frame_buffer.h  pipeline.h  ray_tracing.h  resource.h  shader.h  state_track.cpp  state_track.h  xmake.lua
source/gui/: gui_panel.cpp  gui_panel.h  gui_pass.cpp  gui_pass.h  xmake.lua
source/render_graph/: render_graph.cpp  render_graph.h  render_pass.h  render_resource_cache.cpp  render_resource_cache.h  xmake.lua
source/render_pass/: xmake.lua
source/scene/: camera.cpp  camera.h  distance_field.cpp  distance_field.h  distance_filed.cpp  geometry.cpp  geometry.h  image.cpp  image.h  light.h  scene.cpp  scene.h  surface_cache.cpp  surface_cache.h  transform.cpp  transform.h  virtual_mesh.cpp  virtual_mesh.h  virtual_texture.cpp  virtual_texture.h  xmake.lua
source/shader/: Common.hlsli  Constants.hlsli  DDGI.slang  DDGICommon.hlsli  Intersect.hlsli  Medium.hlsli  PostProcess.hlsli  SdfCommon.hlsli  SkyCommon.hlsli  atmosphere_properties.slang  bxdf.slang  full_screen_quad_vs.slang  gbuffer.slang  intersect.slang  material.slang  math_helper.slang  restir_helper.slang  sdf_trace.slang  shader_compiler.cpp  shader_compiler.h  shadow_helper.slang  sky.slang  vxgi_helper.slang  xmake.lua
source/test/: final_test.cpp  final_test.h  global_render.cpp  global_render.h  main.cpp  test_atmosphere.cpp  test_atmosphere.h  test_base.cpp  test_base.h  test_ray_tracing.cpp  test_ray_tracing.h  test_restir.cpp  test_restir.h  test_sdf.cpp  test_sdf.h  test_virtual_geometry.h  xmake.lua
vulkan_test/: GlfwWindow.cpp  GlfwWindow.h  VulkanBase.cpp  VulkanBase.h  main.cpp  vulkan_base.cpp
(+550 files in other folders)
